# rcm-bootstrap

./: .gitignore  .travis.yml  Makefile.am  Pipfile  README.md  autogen.sh  configure.ac  test.sh
.ci/: build.sh  install-deps.sh
.github/workflows/: ci.yml
src/: Darwin.j2  Linux.j2  base.m4  bootstrap.j2.base  bootstrap.j2tpl  bootstrap.m4
test/: hello-world.t  setup.sh
